// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 1: cirno 1`] = `
{
  "code": 0,
  "files": [],
  "signal": null,
  "stderr": "",
  "stdout": "cirno/0.0.1

Usage:
  $ cirno <command> [options]

Commands:
  init                   Initialize a new project
  list                   List all instances
  import [src] [name]    Import an instance
  export [id] [dest]     Export an instance
  clone [id] [name]      Clone an instance
  backup [id] [name]     Backup an instance
  restore [head] [base]  Restore an instance
  remove [id]            Remove an instance

For more info, run any command with the \`--help\` flag:
  $ cirno init --help
  $ cirno list --help
  $ cirno import --help
  $ cirno export --help
  $ cirno clone --help
  $ cirno backup --help
  $ cirno restore --help
  $ cirno remove --help

Options:
  -h, --help     Display this message 
  -v, --version  Display version number 
",
}
`;

exports[`step 2: cirno init 1`] = `
{
  "code": 0,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " SUCCESS  Cirno project initialized at /Users/shigma/Documents/touhou/cordis/cirno/temp/a17199e7-8e7a-40b4-93c9-5cf3b512b71f/data.
",
}
`;

exports[`step 3: cirno init 1`] = `
{
  "code": 1,
  "files": [
    {
      "content": "version: '1.0'
instances: []
",
      "path": "cirno.yml",
    },
  ],
  "signal": null,
  "stderr": "",
  "stdout": " ERROR  Project already exists. Use \`cirno init -f\` to overwrite.
",
}
`;
